Set Up a basic functional util class

--- a/TestNotebook.ipynb
+++ b/TestNotebook.ipynb
@@ -1,45 +1,27 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
-        "id": "TPc6fJPuk4MF"
+        "id": "xYhtDnE4mpJ6"
       },
       "outputs": [],
-      "source": []
-    },
-    {
-      "cell_type": "code",
       "source": [
         "from requests_oauthlib import OAuth1Session\n",
         "import requests\n",
         "import os\n",
         "import json\n",
         "import pandas as pd"
-      ],
-      "metadata": {
-        "id": "xYhtDnE4mpJ6"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 2,
+      "metadata": {
+        "id": "hQiNi1kjoJPM"
+      },
+      "outputs": [],
       "source": [
         "# @fr16nb's token\n",
         "bearer_token = \"AAAAAAAAAAAAAAAAAAAAAKEUhgEAAAAAYo%2FYh5Jpb%2Fau8yaOs%2BO1bojGfFY%3DjkemdnofEolHLUwEzS7STSxqbrheB3FwKlldyCPHia9bF4tUcU\"\n",
@@ -55,15 +37,15 @@
         "    # in_reply_to_user_id, lang, non_public_metrics, organic_metrics,\n",
         "    # possibly_sensitive, promoted_metrics, public_metrics, referenced_tweets,\n",
         "    # source, text, and withheld"
-      ],
-      "metadata": {
-        "id": "hQiNi1kjoJPM"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 3,
+      "metadata": {
+        "id": "c2OSW5-mo-vt"
+      },
+      "outputs": [],
       "source": [
         "def create_url():\n",
         "    # Replace with user ID below\n",
@@ -71,15 +53,15 @@
         "    # url = \"https://api.twitter.com/2/tweets?{}\".format(ids)\n",
         "    \n",
         "    return url"
-      ],
-      "metadata": {
-        "id": "c2OSW5-mo-vt"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 4,
+      "metadata": {
+        "id": "f-UrtS_qo-8V"
+      },
+      "outputs": [],
       "source": [
         "  def get_params():\n",
         "    # Tweet fields are adjustable.\n",
@@ -92,31 +74,15 @@
         "    return {\"tweet.fields\": \"conversation_id,author_id,in_reply_to_user_id,referenced_tweets,created_at,lang,text,entities,id,source,withheld\",\n",
         "            \"expansions\" : \"author_id,in_reply_to_user_id,referenced_tweets.id\", \n",
         "            \"user.fields\" : \"name,username\"}\n"
-      ],
-      "metadata": {
-        "id": "f-UrtS_qo-8V"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": 5,
       "metadata": {
-        "id": "855ervHL_PTO"
+        "id": "1KNu8UKDo_11"
       },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [],
-      "metadata": {
-        "id": "erMfCvWZ_aH0"
-      }
-    },
-    {
-      "cell_type": "code",
+      "outputs": [],
       "source": [
         "def bearer_oauth(r):\n",
         "    \"\"\"\n",
@@ -126,15 +92,15 @@
         "    r.headers[\"Authorization\"] = f\"Bearer {bearer_token}\"\n",
         "    r.headers[\"User-Agent\"] = \"v2UserTweetsPython\"\n",
         "    return r"
-      ],
-      "metadata": {
-        "id": "1KNu8UKDo_11"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 6,
+      "metadata": {
+        "id": "S-ZRIQ-JpBKc"
+      },
+      "outputs": [],
       "source": [
         "# Fetchs \n",
         "def connect_to_endpoint(url, params):\n",
@@ -147,21 +113,11 @@
         "            )\n",
         "        )\n",
         "    return response.json()"
-      ],
-      "metadata": {
-        "id": "S-ZRIQ-JpBKc"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "url = create_url()\n",
-        "params = get_params()\n",
-        "json_response = connect_to_endpoint(url, params)\n",
-        "print(json.dumps(json_response, indent=4, sort_keys=True))"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -169,11 +125,10 @@
         "id": "25ySH0VdpCNt",
         "outputId": "56876293-09d9-4ff0-a1fb-e528078fc795"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "200\n",
             "{\n",
@@ -954,16 +909,51 @@
             "}\n"
           ]
         }
+      ],
+      "source": [
+        "url = create_url()\n",
+        "params = get_params()\n",
+        "json_response = connect_to_endpoint(url, params)\n",
+        "print(json.dumps(json_response, indent=4, sort_keys=True))"
       ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": null,
       "metadata": {
         "id": "snA2mKi-pG3d"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3.9.7 ('base')",
+      "language": "python",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.9.7"
+    },
+    "vscode": {
+      "interpreter": {
+        "hash": "d6eb5891f25db7a8f9d5f93b0192c288ba2fbe3f4f69cd0dd94ef07104d333ab"
+      }
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
