--- a/data_preprocess.ipynb
+++ b/data_preprocess.ipynb
@@ -2,19 +2,51 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "from Utils import Utils\n",
     "import pandas as pd\n",
     "import csv\n",
-    "import re"
+    "import re\n",
+    "import nltk\n",
+    "import collections"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nltk.download('stopwords') # python -m nltk.downloader stopwords\n",
+    "from nltk.corpus import stopwords\n",
+    "stop_words = stopwords.words('english')\n",
+    "\n",
+    "def text_to_tokens(text):\n",
+    "    pattern = r\"['@A-Za-z0-9]+?['A-Za-z0-9]+\"\n",
+    "    regex = re.compile(pattern)\n",
+    "    regex = regex.findall(text)\n",
+    "    res = []\n",
+    "    for word in regex:\n",
+    "        if word[0] == \"'\" and word[-1] == \"'\":\n",
+    "            word = word[1:]\n",
+    "            word = word[:1]\n",
+    "        res.append(word)\n",
+    "    return res\n",
+    "\n",
+    "def remove_stop_words(tokens):\n",
+    "    res = []\n",
+    "    for t in tokens:\n",
+    "        if t not in stop_words:\n",
+    "            res.append(t)\n",
+    "    return res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -29,9 +61,8 @@
     }
    ],
    "source": [
-    "path = 'tweet_history.csv'\n",
+    "path = 'tweets_history.csv'\n",
     "tweet_history = open(path, 'w', newline='', encoding=\"utf-8\")\n",
-    "\n",
     "cw = csv.writer(tweet_history)\n",
     "\n",
     "# load data\n",
@@ -46,120 +77,22 @@
     "        txt = json_response['data'][i]['text']\n",
     "        txt = txt.replace('\\n', ' ')\n",
     "        txt = re.sub(r'http\\S+', '', txt) # remove urls\n",
-    "        txt = re.sub(r'@\\S+', '', txt) # remove mentions\n",
-    "        clean_txt = re.sub('[^\\sA-Za-z0-9]+', '', txt)\n",
-    "        words = clean_txt.split()\n",
-    "        if len(words) != 0:\n",
-    "            cw.writerow([words])\n",
+    "        #txt = re.sub(r'@\\S+', '', txt) # remove mentions?\n",
+    "        txt = re.sub('[^@\\sA-Za-z0-9]+', '', txt) # remove special char except @ for mentions?\n",
+    "        tokens = text_to_tokens(txt)\n",
+    "        clean_txt = remove_stop_words(tokens)\n",
+    "        if len(clean_txt) != 0:\n",
+    "            cw.writerow(clean_txt)\n",
     "\n",
     "tweet_history.close()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>['RT', 'Teams', 'completed', 'additional', 'vehicle', 'inspections', 'and', 'reviews', 'rocket', 'and', 'payload', 'are', 'looking', 'good', 'for', 'launch', 'of', 'the', 'H']</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>['Most', 'important', 'data', 'was', 'hidden',...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>['One', 'of', 'the', 'best', 'aircraft', 'ever']</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>['Oh', 'you', 'know', 'keeping', 'busy']</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>['To', 'be', 'called', 'AGI', 'it', 'needs', '...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>['Small', 'world']</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>342</th>\n",
-       "      <td>['The', 'safety', 'of', 'any', 'AI', 'system',...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>343</th>\n",
-       "      <td>['Haha', 'pretty', 'close', 'Electrical', 'clo...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>344</th>\n",
-       "      <td>['Funny', 'thing', 'is', 'that', 'there', 'was...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>345</th>\n",
-       "      <td>['I', 'recently', 'learned', 'that', 'OpenAI',...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>346</th>\n",
-       "      <td>['Truth']</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>347 rows × 1 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    ['RT', 'Teams', 'completed', 'additional', 'vehicle', 'inspections', 'and', 'reviews', 'rocket', 'and', 'payload', 'are', 'looking', 'good', 'for', 'launch', 'of', 'the', 'H']\n",
-       "0    ['Most', 'important', 'data', 'was', 'hidden',...                                                                                                                             \n",
-       "1     ['One', 'of', 'the', 'best', 'aircraft', 'ever']                                                                                                                             \n",
-       "2             ['Oh', 'you', 'know', 'keeping', 'busy']                                                                                                                             \n",
-       "3    ['To', 'be', 'called', 'AGI', 'it', 'needs', '...                                                                                                                             \n",
-       "4                                   ['Small', 'world']                                                                                                                             \n",
-       "..                                                 ...                                                                                                                             \n",
-       "342  ['The', 'safety', 'of', 'any', 'AI', 'system',...                                                                                                                             \n",
-       "343  ['Haha', 'pretty', 'close', 'Electrical', 'clo...                                                                                                                             \n",
-       "344  ['Funny', 'thing', 'is', 'that', 'there', 'was...                                                                                                                             \n",
-       "345  ['I', 'recently', 'learned', 'that', 'OpenAI',...                                                                                                                             \n",
-       "346                                          ['Truth']                                                                                                                             \n",
-       "\n",
-       "[347 rows x 1 columns]"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df = pd.read_csv(path)\n",
-    "df"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -178,7 +111,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.6 (tags/v3.10.6:9c7b4bd, Aug  1 2022, 21:53:49) [MSC v.1932 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
