--- a/data_preprocess.ipynb
+++ b/data_preprocess.ipynb
@@ -41,6 +41,20 @@
     "    for t in tokens:\n",
     "        if t not in stop_words:\n",
     "            res.append(t)\n",
+    "    return res\n",
+    "\n",
+    "# parts of speech tagging\n",
+    "nltk.download('punkt')\n",
+    "nltk.download('averaged_perceptron_tagger')\n",
+    "def filter_insignificant(clean_txt):\n",
+    "    txt = \" \".join([str(word) for word in clean_txt])\n",
+    "    res = []\n",
+    "    for sent in nltk.set_tokenize(txt):\n",
+    "        tokens = nltk.word_tokenize(sent)\n",
+    "        tagged = nltk.pos_tag(tokens)\n",
+    "        for t in tagged:\n",
+    "            if t[1] in [\"NN\", \"VB\"]:\n",
+    "                res.append(t[0])\n",
     "    return res"
    ]
   },
@@ -77,12 +91,13 @@
     "        txt = json_response['data'][i]['text']\n",
     "        txt = txt.replace('\\n', ' ')\n",
     "        txt = re.sub(r'http\\S+', '', txt) # remove urls\n",
-    "        #txt = re.sub(r'@\\S+', '', txt) # remove mentions?\n",
+    "        txt = re.sub(r'@\\S+', '', txt) # remove mentions?\n",
     "        txt = re.sub('[^@\\sA-Za-z0-9]+', '', txt) # remove special char except @ for mentions?\n",
     "        tokens = text_to_tokens(txt)\n",
     "        clean_txt = remove_stop_words(tokens)\n",
-    "        if len(clean_txt) != 0:\n",
-    "            cw.writerow(clean_txt)\n",
+    "        meaningful_txt = filter_insignificant(clean_txt)\n",
+    "        if len(meaningful_txt) != 0:\n",
+    "            cw.writerow(meaningful_txt)\n",
     "\n",
     "tweet_history.close()"
    ]
@@ -97,7 +112,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.6 64-bit",
+   "display_name": "mlenv",
    "language": "python",
    "name": "python3"
   },
@@ -111,12 +126,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6 (tags/v3.10.6:9c7b4bd, Aug  1 2022, 21:53:49) [MSC v.1932 64 bit (AMD64)]"
+   "version": "3.9.15 (main, Nov 24 2022, 14:39:17) [MSC v.1916 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "369f2c481f4da34e4445cda3fffd2e751bd1c4d706f27375911949ba6bb62e1c"
+    "hash": "ca1782f70ef7d425cc3cc7b3f381b93621b74c3c699bc9a92934c83f31935648"
    }
   }
  },
